# MCA-Brain-System

./: .env.example  .gitignore  BUILD_SECURE.md  CHANGELOG.md  CLAUDE.md  MCA_Brain_System_v1.0.spec  PATCH_GUIDE.md  PENETRATION_TEST_REPORT.md  README.md  README_BRAIN.md  REQUIREMENTS.md  ROADMAP_v1.2.md  build_secure.py  main.py  pack.bat  pyarmor.cfg  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  test_detector.py  test_detector2.py  test_full_analysis.py  test_mpl_qt.py  test_pyqt_ideas.py  text_torch.py
brain_system/: cache.py  cli.py  core.py  dlc.py  ha.py  observability.py  retry.py
brain_system/dlcs/: brain_dlc_distributed.py  brain_dlc_hardware.py
brain_system/monitoring/: __init__.py
brain_system/security/: __init__.py
brain_system/utils/: __init__.py
config/: app_config.py  constants.py
data/: mca_data.db-shm  mca_data.db-wal
data/rules/: diagnostic_rules.json  gpu_issues.json  mod_conflicts.json  mod_database.json
dlcs/: brain_dlc_codebert.py  brain_dlc_hardware.py  brain_dlc_workflow.py
docs/: PATCH_GUIDE.md  README_BRAIN.md  TEST_REPORT_TEMPLATE.md  api.rst  conf.py  index.rst  make.bat  ops.rst
hooks/: hook-mca_core.detectors.py
mca_core/: app.py  crash_patterns.py  di.py  diagnostic_engine.py  errors.py  events.py  file_io.py  file_ops.py  lab_mixins.py  launcher.py  learning.py  module_loader.py  pipeline.py  plugins.py  progress.py  python_runtime_optimizer.py  regex_cache.py  resources.py  rules.py  security.py  settings_mixins.py  state.py  streaming.py  tasks.py  testable.py
mca_core/detectors/: __init__.py  base.py  duplicate_mods.py  geckolib_more.py  gl_errors.py  jvm_issues.py  missing_dependencies.py  registry.py  shader_world_conflicts.py  version_conflicts.py
plugins/: README_plugin_example.py
scripts/: check_gpu.py  debug_auto_test.py  debug_imports.py  debug_scenarios.py  repair_mca_env.py
scripts/benchmarks/: benchmark_ai.py  benchmark_pytorch_accuracy.py  benchmark_pytorch_ai.py  test_ai_accuracy.py  test_ai_accuracy_full.py  test_ai_performance.py
scripts/dev/: generate_icon.py  generate_mc_log.py  neural_adversary.py
scripts/dev_tests/: profile_startup.py  test_dlc_methods.py
scripts/setup/: README.md  Start_Repair.bat  collect_libs.py  install_cuda.bat  install_env.bat  setup.py
src/: __init__.py
src/brain_system/: __init__.py  cache.py  config.py  config_validator.py  core.py  discovery.py  dlc.py  ha.py  models.py  observability.py  (+4 more)
tests/: test_bain_dlc_discovery.py  test_brain_compute_routing.py  test_brain_config_architecture.py  test_brain_config_source_security.py  test_cache.py  test_core_security.py  test_crash_patterns.py  test_detectors.py  test_gl_errors_detector.py  test_hardware_analysis_panel.py  test_input_sanitizer_paths.py  test_log_service.py  test_performance.py  test_refactored_dlcs.py  test_retry.py  test_services.py  test_signature.py  test_smoke.py  test_unit_core.py  verify_database_integration.py  verify_startup.py
tools/: collect_libs.py  generate_mc_log.py  neural_adversary.py  package_release.py  prepare_build.py  run_build.py  sign_patch.py
utils/: __init__.py  helpers.py
(+111 files in other folders)
