[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mca-brain-system"
version = "1.1.0"
description = "Minecraft Crash Analyzer with Brain AI System"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MCA Team" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/JohnnyEisen/MCA-Brain-System"
Repository = "https://github.com/JohnnyEisen/MCA-Brain-System.git"
Issues = "https://github.com/JohnnyEisen/MCA-Brain-System/issues"

dependencies = [
  "packaging>=23.2",
]

[project.optional-dependencies]
crypto = [
  "cryptography>=42.0.0",
]
observability = [
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
]
server = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
]
logging = [
  "python-json-logger>=2.0.7",
]
config = [
  "watchdog>=4.0.0",
  "python-consul2>=0.1.5",
]
ha = [
  "redis>=5.0.0",
]
docs = [
  "sphinx>=7.2.0",
]

[project.scripts]
mca = "mca_core.launcher:launch_app"
brain = "brain_system.cli:main"
brain-ui = "brain_system.ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
